--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="hud" aria-hidden>
-          <div class="points" id="points">❤️ Carinho: <strong id="score">0</strong></div>
+          <div class="points" id="points">❤️ Acertos: <strong id="score">0</strong></div>
         </div>
       </header>
       <main class="scene" id="scene">
@@ -66,7 +66,7 @@
         <div class="card" id="card">
           <!-- Intro -->
           <div id="phase-intro" class="phase">
-            <h1>Bem-vinda, DaniT! 🏎️</h1>
+            <h1>welcome, DaniT! com T maiusculo🏎️</h1>
             <p class="lead">Atençao, acho que o nao eu já tenho, agora vou em busca da humilhaçao 🌈</p>
             <div style="margin-top:8px;">
               <button class="big-btn btn-start" id="startBtn">CLICA NESSA PORRA</button>
@@ -76,7 +76,7 @@
           <!-- Phase 1 -->
           <div id="phase-1" class="phase" style="display:none;">
             <h1>Fase 1 — Escolha o carro certo</h1>
-            <p class="lead">Clique no carro vermelho.</p>
+            <p class="lead">carro da ferrari.</p>
             <div class="race-track" aria-hidden>
               <div class="checkered" aria-hidden></div>
               <div style="display:flex;gap:14px;align-items:center;justify-content:center;">
@@ -160,10 +160,10 @@ document.querySelectorAll('#phase-3 .heart').forEach(h=>{
 });
 
 document.getElementById('yesBtn').onclick=()=>{
-  alert('😍 DaniT disse SIM! EU NAO SEI O QUE FAZER, ESTOU NERVOSA!');
+  alert('SIM? EU NAO SEI O QUE FAZER, ESTOU NERVOSA!');
 };
 document.getElementById('noBtn').onclick=()=>{
-  alert('😢 Ahh, DaniT disse não. FODA-SE!');
+  alert('NAO?. FODA-SE!');
 };
 </script>
 </body>
